# NexusAI

./: .gitignore  README.md  app.py  pyproject.toml
src/nexus_ai/: crew.py  main.py
src/nexus_ai/config/: agents.yaml  tasks.yaml
src/nexus_ai/tools/: custom_tool.py  search_tool.py
