[project]
name = "nexus_ai"
version = "0.1.0"
description = "Nexus_AI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0",
    "ddgs>=9.5.5",
]

[project.scripts]
nexus_ai = "nexus_ai.main:run"
run_crew = "nexus_ai.main:run"
train = "nexus_ai.main:train"
replay = "nexus_ai.main:replay"
test = "nexus_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
